# alcotaro

./: .env.example  .gitignore  README.md  bot.py  config.py  keep_alive.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
constants/: callbacks.py  prompts.py  texts.py
data/: readings.json  users.json
handlers/: payments.py  tarot.py
keyboards/: inline.py
models/: schemas.py
services/: openai_service.py  payment_service.py
utils/: animations.py  storage.py
